<resources>
    <string name="app_name">Instagram Clone</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="sign_up_text">Sing up to see photos and videos from your friends and family</string>
    <string name="sign_up">Sign Up</string>
    <string name="Services">People who use our service may have uploaded your contact information to Instagram. Learn More</string>
    <string name="terms_policy">By signing up, you agree to our Terms , Privacy Policy and Cookies Policy .</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">Login</string>
</resources>